# Canon-C

./: .clang-tidy  AI-USAGE.md  CHEATSHEET.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  RELEASES.md
.github/actions/framac-setup/: action.yml
.github/workflows/: cmake-multi-platform.yml
algo/: any_all.h  filter.h  find.h  fold.h  map.h  reverse.h  search.h  sort.h  unique.h
algo/any_all/: any_all.h  any_all_decl.h  any_all_defn.h  any_all_impl.h  any_all_mangle.h
algo/filter/: filter.h  filter_decl.h  filter_defn.h  filter_impl.h  filter_mangle.h
algo/find/: find.h  find_decl.h  find_defn.h  find_impl.h  find_mangle.h
algo/fold/: fold.h  fold_decl.h  fold_defn.h  fold_impl.h  fold_mangle.h
algo/map/: map.h  map_decl.h  map_defn.h  map_impl.h  map_mangle.h
algo/reverse/: reverse.h  reverse_decl.h  reverse_defn.h  reverse_impl.h  reverse_mangle.h
algo/search/: search.h  search_decl.h  search_defn.h  search_impl.h  search_mangle.h
algo/sort/: sort.h  sort_decl.h  sort_defn.h  sort_impl.h  sort_mangle.h
algo/unique/: unique.h  unique_decl.h  unique_defn.h  unique_impl.h  unique_mangle.h
canary/: README.md  misra_canary.h
core/: arena.h  memory.h  ownership.h  pool.h  region.h  scope.h  slice.h
core/primitives/: bits.h  checked.h  compare.h  contract.h  lifetime.h  limits.h  ptr.h  types.h
data/: array.h  bitset.h  deque.h  priority_queue.h  queue.h  range.h  stack.h  stringbuf.h  vec.h
data/convenience/: dynstring.h  dynvec.h  smallvec.h
data/deque/: deque.h  deque_decl.h  deque_defn.h  deque_impl.h  deque_mangle.h
data/hashmap/: hashmap.h  hashmap_decl.h  hashmap_defn.h  hashmap_fmt.h  hashmap_impl.h  hashmap_mangle.h  hashmap_range.h
data/vec/: vec.h  vec_decl.h  vec_defn.h  vec_fmt.h  vec_impl.h  vec_mangle.h  vec_range.h
docs/: compcert-licensing.md  decision-families.md  design-decisions.md  deviations.md  traceability.md  verification.md  vmacros.md
docs/threadx/: README.md
semantics/: borrow.h  diag.h  error.h  option.h  result.h
semantics/option/: option.h  option_decl.h  option_defn.h  option_impl.h  option_mangle.h
semantics/result/: result.h  result_decl.h  result_defn.h  result_impl.h  result_mangle.h
test/algo/: any_all_test.c  filter_test.c  find_test.c  fold_test.c  map_test.c  reverse_test.c  search_test.c  sort_test.c  unique_test.c
test/core/: arena_test.c  limits_test.c  memory_test.c  ownership_test.c  pool_test.c  region_test.c  scope_test.c  slice_test.c
test/core/primitives/: bits_test.c  checked_test.c  compare_test.c  contract_test.c  limits_test.c  ptr_test.c  types_test.c
test/data/: array_test.c  bitset_test.c  deque_test.c  hashmap_test.c  priority_queue_test.c  queue_test.c  range_test.c  stack_test.c  stringbuf_test.c  vec_test.c
test/data/convenience/: dynstring_test.c  dynvec_test.c  smallvec_test.c
test/semantics/: borrow_test.c  diag_test.c  error_test.c  option_test.c  result_test.c
test/util/: file_test.c  intern_test.c  log_test.c  parse_test.c  random_test.c  str_join_test.c  str_split_test.c  str_test.c  str_view_test.c  time_test.c
tests/: core_test.c
tests/core/: test_core.c
util/: file.h  intern.h  log.h  log_macros.h  parse.h  random.h  str_join.h  str_split.h  str_view.h  string.h  time.h
util/log/: log.h  log_macros.h
util/str/: intern.h  str.h  str_join.h  str_split.h  str_view.h  string.h
vdrivers/: note.md
vmacros/coverage/: option_cover.c  result_cover.c  vec_cover.c
vmacros/vdrivers/: option_verify.h  result_verify.h  vec_verify.h
